--- a/menu/src/main/res/values/strings.xml
+++ b/menu/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Munu</string>
+    <string name="app_name">Menu</string>
 
     <string name="end_activity_eat_count">到\n店\n就\n餐\nnum\n次</string>
 
