增加开机页面

--- a/dishmap/src/main/res/values/strings.xml
+++ b/dishmap/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="text_busy">繁忙</string>
     <string name="text_leisure">空闲</string>
     <string name="text_mezzo">适中</string>
+    <string name="text_company_name">北京盛宴时代科技有限公司\nBeijing feast time technology Co.,Ltd</string>
+
 </resources>
